--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>React Transform Boilerplate</title>
+    <title>tiger_shop</title>
   </head>
   <body>
+
     <div id="root"></div>
     <script src="./dist/bundle.js"></script>
   </body>
